[package]
name = "polymesh-runtime"
version = "0.6.0"
authors = ["Polymath"]
edition = "2018"
build = "build.rs"

[dependencies]
serde_json = { version = "1.0.44", default-features = false }
rand = { version = "0.7.2", default-features = false }
chrono = { version = "0.4.10", default-features = false }
yaml-rust = { version = "0.4.3", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
bitvec = { version = "0.16.1", default-features = false, features = ["alloc"] }
rustc-hex = { version = "2.0.1", default-features = false }
log = { version = "0.4.8"}
serde = { version = "1.0.104", default-features = false }
serde_derive = { version = "1.0.104", optional = true }
safe-mix = { version = "1.0.0", default-features = false }
primitives = { package = "polymesh-primitives", path = "../primitives", default-features = false }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
sp-serializer = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-authorship = { package = "pallet-authorship", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-contracts = { package = "pallet-contracts", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-elections = { package = "pallet-elections", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-executive = { package = "frame-executive", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-finality-tracker = { package = "pallet-finality-tracker", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-grandpa = { package = "pallet-grandpa", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-indices = { package = "pallet-indices", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-membership = { package = "pallet-membership", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-offences = { package = "pallet-offences", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-session = { package = "pallet-session", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-staking = { package = "pallet-staking", path = "../custom/staking", default-features = false}
pallet-staking-reward-curve = { version = "2.0.0",  path = "../custom/staking/reward-curve" }
pallet-sudo = { package = "pallet-sudo", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
frame-system = { package = "frame-system", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-treasury = { package = "pallet-treasury", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-version = { package = "sp-version", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-babe = { package = "pallet-babe", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-consensus-babe = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-authority-discovery = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-phragmen = { package = "sp-phragmen", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-api = { package = "sp-api", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
pallet-transaction-payment = { package = "pallet-transaction-payment", path = "../custom/transaction-payment", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", path = "../custom/transaction-payment/rpc/runtime-api", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }

[dev-dependencies]
test-client = { package = "substrate-test-runtime-client", git = "https://github.com/paritytech/substrate", rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }
hex-literal = "0.2.1"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
equalize = []
default = ["std", "equalize"]
no_std = []
only-staking = []
std = [
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"serde_derive",
	"rand/std",
	"serde/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-version/std",
    "sp-consensus-babe/std",
	"sp-session/std",
	"sp-authority-discovery/std",
	"sp-phragmen/std",
	"sp-runtime/std",
    "sp-staking/std",
	"pallet-authorship/std",
	"pallet-contracts/std",
	"pallet-elections/std",
	"pallet-democracy/std",
	"pallet-executive/std",
	"pallet-finality-tracker/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
    "pallet-offences/std",
	"pallet-session/std",
    "pallet-staking/std",
	"pallet-sudo/std",
    "pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-authority-discovery/std",
	"pallet-babe/std",
	"frame-system-rpc-runtime-api/std"
]
