[package]
name = "CountTransferManager"
version = "0.1.0"
authors = ["Polymath Inc."]
edition = "2018"

[dependencies]
ink_metadata = {  git = "https://github.com/paritytech/ink", rev = "31276d89e75bab4d9060166d85f5439b2411eba1", package = "ink_metadata", default-features = false, features = ["derive"], optional = true }
ink_primitives = {  git = "https://github.com/paritytech/ink", rev = "31276d89e75bab4d9060166d85f5439b2411eba1", package = "ink_primitives", default-features = false }
ink_core = { git = "https://github.com/paritytech/ink", rev = "31276d89e75bab4d9060166d85f5439b2411eba1", package = "ink_core", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", rev = "31276d89e75bab4d9060166d85f5439b2411eba1", package = "ink_lang", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.3", default-features = false, features = ["derive"], optional = true }

[dependencies.type-metadata]
git = "https://github.com/type-metadata/type-metadata.git"
rev = "02eae9f35c40c943b56af5b60616219f2b72b47d"
default-features = false
features = ["derive"]
optional = true

[lib]
name = "CountTransferManager"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Required for ABI generation, and using this contract as a dependency.
	# If using `cargo contract build`, it will be automatically disabled to produce a smaller Wasm binary
	"rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata",
    "ink_metadata/std",
    "ink_core/std",
    "ink_lang/std",
    "ink_primitives/std",
    "scale/std",
    "type-metadata/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []

[workspace]
members = []