[package]
name = "CountTransferManager"
version = "0.1.0"
authors = ["Polymath Inc."]
edition = "2018"

[dependencies]
ink_metadata = {  git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true, tag = "v3.0.0-rc2" }
ink_primitives = {  git = "https://github.com/paritytech/ink", default-features = false, tag = "v3.0.0-rc2" }
ink_storage = { git = "https://github.com/paritytech/ink", default-features = false, tag = "v3.0.0-rc2" }
ink_lang = { git = "https://github.com/paritytech/ink", default-features = false, tag = "v3.0.0-rc2" }
ink_prelude = { git = "https://github.com/paritytech/ink", default-features = false, tag = "v3.0.0-rc2" }
ink_env = { git = "https://github.com/paritytech/ink", default-features = false, tag = "v3.0.0-rc2" }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.4", default-features = false, features = ["derive"], optional = true }

[lib]
name = "CountTransferManager"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Required for ABI generation, and using this contract as a dependency.
	# If using `cargo contract build`, it will be automatically disabled to produce a smaller Wasm binary
	"rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata",
    "ink_metadata/std",
    "ink_storage/std",
    "ink_lang/std",
    "ink_env/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []

[workspace]
members = []