[package]
name = "percentage_transfer_manager"
version = "0.1.0"
authors = ["Polymath Inc <satyam@polymath.network>"]
edition = "2018"

[dependencies]
ink_metadata = {  git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true, tag = "v3.0.0-rc2" }
ink_primitives = {  git = "https://github.com/paritytech/ink", default-features = false, tag = "v3.0.0-rc2" }
ink_storage = { git = "https://github.com/paritytech/ink", default-features = false, tag = "v3.0.0-rc2" }
ink_lang = { git = "https://github.com/paritytech/ink", default-features = false, tag = "v3.0.0-rc2" }
ink_prelude = { git = "https://github.com/paritytech/ink", default-features = false, tag = "v3.0.0-rc2" }
ink_env = { git = "https://github.com/paritytech/ink", default-features = false, tag = "v3.0.0-rc2" }

scale = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.4", default-features = false, features = ["derive"], optional = true }

[lib]
name = "percentage_transfer_manager"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata",
    "ink_metadata/std",
    "ink_storage/std",
    "ink_lang/std",
    "ink_env/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]

[profile.release]
overflow-checks = false

ink-as-dependency = []

[workspace]
members = []
