[package]
name = "nft_royalty"
version = "0.1.0"
authors = ["Polymesh"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

frame-support = { version = "26.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
sp-arithmetic = { version = "6.0.0", default-features = false }

polymesh-api = { version = "3.0", default-features = false, features = ["ink"] }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "frame-support/std",
    "ink/std",
    "polymesh-api/std",
    "scale/std",
    "scale-info/std",
    "sp-arithmetic/std"
]
ink-as-dependency = []
e2e-tests = []
