[package]
name = "polymesh-ink"
version = "3.0.0"
authors = ["PolymeshAssociation"]
edition = "2021"
license = "Apache-2.0"
description = "Upgradable Polymesh Ink! API"
keywords = ["polymesh", "ink", "blockchain", "substrate", "upgradable"]
repository = "https://github.com/PolymeshAssociation/Polymesh"
homepage = "https://github.com/PolymeshAssociation/Polymesh"

[dependencies]
ink = { version = "4.3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

polymesh-api = { version = "3.6", default-features = false, features = ["ink"] }
polymesh-api-ink = { version = "1.2.2", default-features = false }

paste = "1.0"

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
features = ["as-library"]

[features]
default = ["std"]
use_call_runtime_with_error = ["polymesh-api-ink/use_call_runtime_with_error"]

# Compile as upgradable library.
as-library = []

std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "polymesh-api/std",
]
ink-as-dependency = []
