[package]
name = "polymesh-ink"
version = "3.3.0"
authors = ["PolymeshAssociation"]
edition = "2021"
license = "Apache-2.0"
description = "Upgradable Polymesh Ink! API"
keywords = ["polymesh", "ink", "blockchain", "substrate", "upgradable"]
repository = "https://github.com/PolymeshAssociation/Polymesh"
homepage = "https://github.com/PolymeshAssociation/Polymesh"

[dependencies]
ink = { version = "4.3", default-features = false }
paste = "1.0"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

polymesh-api = { version = "3.8", default-features = false, features = ["ink", "polymesh_v7"] }
polymesh-api-ink = { version = "1.3", default-features = false, features = ["use_call_runtime_with_error"] }

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
features = ["as-library"]

[features]
default = ["std"]

# Compile as upgradable library.
as-library = []

std = [
    "ink/std",
    "polymesh-api/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
