[package]
name = "polymesh-runtime-tests"
version = "1.0.0"
authors = ["Polymath"]
edition = "2018"

[dependencies]
polymesh-primitives = { path = "../primitives", default-features = false }
polymesh-primitives-derive = { path = "../primitives_derive", default-features = false }
polymesh-common-utilities = { path = "../common", default-features = false }
polymesh-runtime-common = { path = "../runtime/common", default-features = false }
polymesh-extensions = { path = "../extensions", default-features = false }

pallet-asset = { path = "../pallets/asset", default-features = false }
pallet-balances = { path = "../pallets/balances", default-features = false }
pallet-sto = { path = "../pallets/sto", default-features = false }
pallet-bridge = { path = "../pallets/bridge", default-features = false }
pallet-committee = { path = "../pallets/committee", default-features = false }
pallet-compliance-manager = { path = "../pallets/compliance-manager", default-features = false }
pallet-confidential = { path = "../pallets/confidential", default-features = false }
pallet-corporate-actions = { path = "../pallets/corporate-actions", default-features = false }
pallet-group = { path = "../pallets/group", default-features = false }
pallet-identity = { path = "../pallets/identity", default-features = false, features = ["no_cdd"] }
pallet-multisig = { path = "../pallets/multisig", default-features = false }
pallet-permissions = { path = "../pallets/permissions", default-features = false }
pallet-pips = { path = "../pallets/pips", default-features = false }
pallet-portfolio = { path = "../pallets/portfolio", default-features = false }
pallet-protocol-fee = { path = "../pallets/protocol-fee", default-features = false }
pallet-settlement = { path = "../pallets/settlement", default-features = false }
pallet-staking = { path = "../pallets/staking", default-features = false }
pallet-statistics = { path = "../pallets/statistics", default-features = false }
pallet-transaction-payment = { path = "../pallets/transaction-payment", default-features = false }
pallet-treasury = { path = "../pallets/treasury", default-features = false }
pallet-utility = { path = "../pallets/utility", default-features = false }
polymesh-contracts = { path = "../pallets/contracts", default-features = false }
polymesh-weights = { path = "../weights", default-features = false }
pallet-sudo = { path = "../pallets/sudo", default-features = false }

# RPC
# pallet-group-rpc-runtime-api = { path = "../../group/rpc/runtime-api", default-features = false }

# Crypto
confidential_identity = { git = "https://github.com/PolymathNetwork/cryptography.git", default-features = false, tag = "v2.2.3" }

# Runtime
polymesh-runtime-develop = { path = "../runtime/develop" }

# General
serde = { version = "1.0.104", default-features = false }
rand = { version = "0.7.3", default-features = false }
chrono = "0.4"
hex-literal = "0.3.0"
smallvec = "1.4.1"
lazy_static = "1.4.0"
parking_lot = "=0.10.2"
env_logger = "0.7"
serde_json = '1.0.48'

# Substrate
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
sp-std = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
sp-io = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
sp-runtime = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
sp-arithmetic = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
sp-staking = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
sp-npos-elections = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2"}
frame-support = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
frame-system = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }

pallet-timestamp = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
pallet-authorship = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
pallet-session = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2", features = ["historical"] }
pallet-randomness-collective-flip = { git = "https://github.com/PolymathNetwork/substrate/", default-features = false, tag = "v2.0.1-2" }
pallet-babe = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
pallet-scheduler = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
pallet-contracts = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }
pallet-staking-reward-curve = { git = "https://github.com/PolymathNetwork/substrate", default-features = false, tag = "v2.0.1-2" }

# Ink
ink_primitives = { git = "https://github.com/paritytech/ink", tag = "v2.1.0", default-features = false }

# Benchmarking
frame-benchmarking = { git = "https://github.com/PolymathNetwork/substrate", tag = "v2.0.1-2", optional = true }

# Test
test_client = { package = "substrate-test-runtime-client", git = "https://github.com/PolymathNetwork/substrate", tag = "v2.0.1-2", optional = true }
substrate-test-utils = { git = "https://github.com/PolymathNetwork/substrate", tag = "v2.0.1-2", optional = true }

[dev-dependencies]
libsecp256k1 = { version = "0.3.5", default-features = false }
wat = "1.0"

[features]
equalize = []
only-staking = []
default = ["std", "equalize"]
std = [
    "confidential_identity/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "ink_primitives/std",
    "pallet-asset/std",
    "pallet-authorship/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "pallet-sto/std",
    "pallet-bridge/std",
    "pallet-committee/std",
    "pallet-compliance-manager/std",
    "pallet-contracts/std",
    "pallet-corporate-actions/std",
    "polymesh-weights/std",
    # "pallet-group-rpc-runtime-api/std",
    "pallet-group/std",
    "pallet-identity/std",
    "pallet-multisig/std",
    "pallet-permissions/std",
    "pallet-pips/std",
    "pallet-portfolio/std",
    "pallet-randomness-collective-flip/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-statistics/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "pallet-sudo/std",
    "polymesh-common-utilities/std",
    "polymesh-primitives/std",
    "polymesh-runtime-common/std",
    "polymesh-contracts/std",
    "polymesh-weights/std",
    "serde/std",
    "sp-arithmetic/std",
    "sp-core/std",
    "sp-io/std",
    "sp-npos-elections/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
    "substrate-test-utils",
    "test_client",
]
runtime-benchmarks = [
    "frame-benchmarking",
]
